@@ -1,3 +1,9 @@
+2008-06-29  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* Makefile.am: Add ICEDTEA_FSG_PATCHES
+	to EXTRA_DIST.
+	* Makefile.in: Regenerated.
+	
 2008-06-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* Makefile.am:
